--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "cv-christian-boissy",
+  "name": "cv-logistique",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://Christian121966.github.io/cv-christian-boissy",
+  "homepage": "https://Christian121966.github.io/cv-logistique",
   "dependencies": {
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/react": "^16.0.0",
